vlib/v/checker/tests/generic_interface_method_decl_err.vv
interface Expr {
	accept<R>(v Visitor<R>) R
}

interface Visitor<R> {
}

fn main() {
}
